--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
     <main id="main">
         <div class="container" data-aos="fade-in">
             <div id="card1" class="card" data-aos="fade-up" data-aos-offset="280">
-                <section class="card-text-desktop"></section>
+                <section class="card-filler"></section>
                 <section class="card-video">
-                    <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" autoplay loop muted />
+                    <video src="/Images/Getting Started Video.mp4" alt="Thumbnail" class="video-thumbnail" autoplay loop muted></video>
                 </section>
                 <section class="card-text-mobile">
                     <h1>GETTING STARTED!</h1>
@@ -290,18 +290,18 @@
 
             <div id="card2" class="card" data-aos="fade-up" data-aos-offset="230">
                 <section class="card-video">
-                    <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" autoplay loop muted />
+                    <video src="/Images/Just One Click Video.mp4" alt="Thumbnail" class="video-thumbnail" autoplay loop muted></video>
                 </section>
-                <section class="card-text-desktop"></section>
+                <section class="card-filler"></section>
                 <section class="card-text-mobile">
                     <h1>JUST ONE CLICK!</h1>
                 </section>
             </div>
 
             <div id="card3" class="card" data-aos="fade-up" data-aos-offset="180">
-                <section class="card-text-desktop"></section>
+                <section class="card-filler"></section>
                 <section class="card-video">
-                    <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" autoplay loop muted />
+                    <video src="/Images/Just One Click Video.mp4" alt="Thumbnail" class="video-thumbnail" autoplay loop muted></video>
                 </section>
                 <section class="card-text-mobile">
                     <h1>NO MORE PROBLEMS!</h1>
